continue adding jwt and crud

--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Meeting Rooms</title>
-    </head>
-    <body>
-        <h1>Meeting Rooms</h1>
-        <ul>
-            {% for meeting in meetings %}
-            <li>{{ meeting["name"] }}</li>
-            {% endfor %}
-        </ul>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Meeting Rooms</title>
+	</head>
+	<body>
+		<h1>Meeting Rooms</h1>
+		<ul>
+			{% for meeting in meetings %}
+			<li>{{ meeting["name"] }}</li>
+			{% endfor %}
+		</ul>
+
+		<form action="/create_meeting" method="POST">
+			<input type="text" name="meeting_name" , placeholder="Enter a meeting name" required />
+			<button>Create room</button>
+		</form>
+	</body>
 </html>
