--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -13,7 +13,7 @@
 			{% endfor %}
 		</ul>
 
-		<form action="/create_meeting" method="POST">
+		<form action="/" method="GET">
 			<input type="text" name="meeting_name" , placeholder="Enter a meeting name" required />
 			<button>Create room</button>
 		</form>
