--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@
 }
 
 :root {
- 
+  --background-image-hero: url('/images/hero-background.png');
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
